# kotlin-native-demo

./: .gitignore  README.md  TODO  in.sh  main.kt
c-types/: .gitignore  CMakeLists.txt  README.md  in-lib.sh  in-main.sh  in.sh  lib.c  lib.h  main.kt
curl/: .gitignore  build.gradle  build.sh  lib.sh  libcurl.def  main.kt
dynamic-lib/: .gitignore  demo.def  in.bat  in.sh  lib.kt  main.c
framework-lib/: .gitignore  in.sh  lib.kt  main.c
framework-lib/kotlin-fx-demo-4/: .gitignore
framework-lib/kotlin-fx-demo-4/kotlin-fx-demo-4/: AppDelegate.swift  ViewController.swift
framework-lib/kotlin-fx-demo-4/kotlin-fx-demo-4.xcodeproj/: project.pbxproj
framework-lib/kotlin-fx-demo2/: .gitignore
framework-lib/kotlin-fx-demo2/kotlin-fx-demo2/: main.swift
framework-lib/kotlin-fx-demo2/kotlin-fx-demo2.xcodeproj/: project.pbxproj
framework-lib/kotlin-fx-demo3/kotlin-fx-demo3/: main.m
framework-lib/kotlin-fx-demo3/kotlin-fx-demo3.xcodeproj/: .gitignore  project.pbxproj
gradle-basics-2019/groovy/: build.gradle
gradle-basics-2019/kts/: build.gradle.kts
gradle-mid/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
gradle-mid-groovy/: build.gradle
gradle-mid-groovy/src/main/kotlin/: lib.kt
gradle-mid-kts/: settings.gradle.kts
gradle-mid-kts/src/main/kotlin/: main.kt
gradle-mpp-groovy/: .gitignore  build.gradle  settings.gradle
gradle-mpp-groovy/src/native/: file.def  main.kt
klib/: in.sh  sample.kt  utils.kt
multi-target/: main.kt
native-lib-ad-hoc/: in.sh  lib.c
native-lib-ad-hoc-macOS/: in.sh  inc.sh  lib.c  lib.def  main.c  main.kt
(+6 files in other folders)
